commented security-pom, added spring.datasource.*

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=ZeinollaD-240701-Spring
+spring.datasource.url=jdbc:postgresql://localhost:5432/zeinolla_store
+spring.datasource.username=postgres
+spring.datasource.password=postgres
