cart -add, increase, decrease, delete products

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ZeinollaD-240701-Spring
 server.port=8080
 server.servlet.context-path=/
-spring.datasource.url=jdbc:postgresql://localhost:5432/zeinolla_store
-#spring.datasource.url=jdbc:postgresql://localhost:5432/store
+#spring.datasource.url=jdbc:postgresql://localhost:5432/zeinolla_store
+spring.datasource.url=jdbc:postgresql://localhost:5432/store
 spring.datasource.username=postgres
 spring.datasource.password=postgres
